--- a/index.html
+++ b/index.html
@@ -2,88 +2,107 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Sorry</title>
+<title>Madeena Ishtiaq</title>
+
 <style>
 body {
   margin: 0;
   height: 100vh;
-  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-  overflow: hidden;
+  background: radial-gradient(circle at top, #1b1b1b, #000000);
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: 'Arial', sans-serif;
-  text-align: center;
+  font-family: "Georgia", serif;
+  overflow: hidden;
 }
 
 .card {
-  background: rgba(255,255,255,0.9);
-  padding: 30px;
-  border-radius: 20px;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-  z-index: 2;
+  background: linear-gradient(145deg, #111, #1c1c1c);
+  padding: 42px;
+  border-radius: 16px;
+  max-width: 440px;
+  width: 85%;
+  text-align: center;
+  box-shadow: 0 20px 60px rgba(0,0,0,0.7);
+  animation: fadeIn 2.5s ease forwards;
 }
 
 h1 {
-  color: #e91e63;
-  font-size: 32px;
+  font-size: 30px;
+  color: #d4af37; /* gold */
+  margin-bottom: 6px;
+  letter-spacing: 1px;
+}
+
+h2 {
+  font-size: 15px;
+  color: #aaa;
+  letter-spacing: 3px;
+  margin-bottom: 26px;
 }
 
 p {
-  font-size: 18px;
-  color: #444;
+  font-size: 17px;
+  line-height: 1.7;
+  color: #e0e0e0;
 }
 
-.heart {
-  position: absolute;
-  bottom: -20px;
-  font-size: 24px;
-  animation: fly 6s linear infinite;
-  color: #ff1744;
+.quote {
+  margin-top: 20px;
+  font-style: italic;
+  color: #c9b037;
+  font-size: 16px;
 }
 
-@keyframes fly {
-  0% {
-    transform: translateY(0) scale(1);
-    opacity: 1;
-  }
-  100% {
-    transform: translateY(-100vh) scale(1.5);
+.signature {
+  margin-top: 30px;
+  font-size: 15px;
+  letter-spacing: 1px;
+  color: #ffffff;
+}
+
+.signature b {
+  color: #d4af37;
+}
+
+/* Animation */
+@keyframes fadeIn {
+  from {
     opacity: 0;
+    transform: translateY(25px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 </style>
 </head>
+
 <body>
 
 <div class="card">
-  <h1>🎉 love you merii jaan <br>Ayla khanii</h1>
+  <h1>Madeena Ishtiaq</h1>
+  <h2>LAW STUDENT</h2>
+
   <p>
-    I only belongs to you <br>
-    <b>❤️</b> & will never leave you 💕
+    Silence is strategy.<br>
+    Discipline is dominance.<br>
+    The law yields to those who master restraint rather than reaction.
   </p>
+
+  <div class="quote">
+    “Justice does not require noise — it requires authority.”
+  </div>
+
+  <div class="signature">
+    — <b>JURIS TRAINEE</b>
+  </div>
 </div>
 
 <audio autoplay loop>
-  <source src="https://www.bensound.com/bensound-music/bensound-love.mp3" type="audio/mpeg">
+  <source src="https://www.bensound.com/bensound-music/bensound-epic.mp3" type="audio/mpeg">
 </audio>
-
-<script>
-function createHeart() {
-  const heart = document.createElement("div");
-  heart.classList.add("heart");
-  heart.innerHTML = "❤️";
-  heart.style.left = Math.random() * 100 + "vw";
-  heart.style.animationDuration = (3 + Math.random() * 3) + "s";
-  document.body.appendChild(heart);
-
-  setTimeout(() => {
-    heart.remove();
-  }, 6000);
-}
-
-setInterval(createHeart, 300);
-</script>
 
 </body>
 </html>
